# rust-cli-news

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs  theme.rs
newsapi/: Cargo.toml
newsapi/src/: lib.rs
src/: main.rs
