[package]
name = "cli-news"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
keywords = ["cli", "news"]
license = "MIT"
repository="https://github.com/Nikon5070/rust-cli-news"
description="News"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
ureq = "2.3.0"
