[package]
name = "cli-news"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
keywords = ["cli", "news"]
license = "MIT"
repository = "https://github.com/Nikon5070/rust-cli-news"
description = "News"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.21.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
newsapi = { path = "./newsapi", features = ["async"] }
termimad = "0.16.4"
tokio = { version = "1.14.0", features = ["full"] }
